@@ -9,6 +9,7 @@
     * Fix a bug: error happens when the font size is 8.5
     * Fix a bug: "unknown locale" ValueError raised for ug_CN
     * Fix a bug: error happens when "apt-get clean" fails.
+    * Check required packages when start up.
 
 2010-05-07 CHEN Yangyang <skabyy@gmail.com>
 
